# Lauvcdn

./: .gitignore  Cargo.toml  README.md  dfx.json
canisters/analytics/: Cargo.toml  analytics.did
canisters/analytics/src/: lib.rs
canisters/billing/: Cargo.toml  billing.did
canisters/billing/src/: lib.rs
canisters/registry/: Cargo.toml  registry.did
canisters/registry/src/: lib.rs
canisters/router/: Cargo.toml  router.did
canisters/router/src/: lib.rs
canisters/storage/: Cargo.toml  storage.did
canisters/storage/src/: lib.rs
canisters/storage_eu/: Cargo.toml  storage.did
canisters/storage_eu/src/: lib.rs
canisters/storage_us/: Cargo.toml  storage.did
canisters/storage_us/src/: lib.rs
frontend/: .env.local  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/ic/: agent.ts  storage.idl.js  storage_us.idl.js
frontend/src/pages/: Download.tsx  Upload.tsx
scripts/: bootstrap_wsl.sh  deploy_ic.ps1  deploy_local.ps1  run_full_stack.ps1  setup.ps1
sdk/js/: package.json
sdk/js/src/: index.ts
sdk/python/: pyproject.toml
sdk/python/lauv/: __init__.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
src/: App.tsx  styles.css
src/pages/: Download.tsx  Upload.tsx
