[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
ic-stable-structures = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ic-certified-map = { workspace = true }
base64 = { workspace = true }
serde_cbor = { workspace = true }